增加登录功能，mongolab未调通，使用本地数据库

--- a/doc/开发文档.md
+++ b/doc/开发文档.md
@@ -35,20 +35,24 @@ npm install sqlite3 --save
 ***
 #常用命令
 ```
+
 npm init 
 
 npm install  --save
 
 npm start
+
 ```
-
+    
 visual studio code 语法解释
+调试需要安装一下模块
 
-npm install -g tsd
-tsd query node --action install
-tsd query express --action install
+	npm install -g tsd
+	tsd query node --action install
+	tsd query express --action install
+或
 
-tsd query node express --action install.
+	tsd query node express --action install.
 
 ***
 ##数据库设计
