--- a/doc/开发文档.md
+++ b/doc/开发文档.md
@@ -6,14 +6,25 @@
 
 ####供应信息     statistics           supply_info
 >供应科总结  div_summary
+>>总结数据录入 div\_sum_input
+
+>>总结数据编辑 div\_sum_edit
+
+>>经济活动分析报告 div\_sum_text
 
 >全局供应信息
 
->合同信息（单价个同）
+>>供应科采购信息汇总 purchase
+
+>>>采购项目信息 \purchase\pur_project
+
+>>合同信息（单价个同）\purchase\pur_conctat
 
 >物资收料信息明细查询   in_wz_search
 
 >按大类的收料统计  in_st(子类)  in_st2（父类）
+
+>用户登录信息 \users\
 
 ####资质信息库
 >局内企业
@@ -45,7 +56,49 @@ npm install  --save
 npm start
 
 ```
-    
+
+##git命令
+	
+***
+
+	git commit -A
+	git commit -m "conflict fixed"
+
+	查看分支：git branch
+
+	创建分支：git branch <name>
+
+	切换分支：git checkout <name>
+
+	创建+切换分支：git checkout -b <name>
+
+	合并某分支到当前分支：git merge <name>
+
+	删除分支：git branch -d <name>
+
+#####远程分支
+	
+	git remote add origin git@github.com:dreamingwood/arc.git
+	git push -u origin master
+	git clone git@github.com:dreamingwood/arc.git
+	git branch -a
+	git push origin --delete devoffice
+	git pull origin macdev
+	git pull
+
+	获得远程分支
+	git checkout macdev
+	git pull origin macdev
+
+***
+
+###MongoDB命令
+
+	启动
+	mongod --dbpath F:\DB\mongodb
+	db 查看当前库
+	use foobar  换库
+    help
 visual studio code 语法解释
 调试需要安装一下模块
 
@@ -56,10 +109,17 @@ visual studio code 语法解释
 
 	tsd query node express --action install.
 
+
+
+
 ***
+
 ##数据库设计
 
 A_开头的为系统开发阶段生成的表，其他为物资系统导入表格
+
+
+***
 
 
 #测试环境
