--- a/doc/开发文档.md
+++ b/doc/开发文档.md
@@ -113,6 +113,14 @@ visual studio code 语法解释
 
 
 ***
+##自动启动系统
+
+npm install -g supervisor
+supervisor app.js
+
+
+
+
 
 ##数据库设计
 
@@ -124,29 +132,97 @@ A_开头的为系统开发阶段生成的表，其他为物资系统导入表格
 
 #测试环境
 
-Page TestingMy recommendation for page testing is that you actually embed tests in the page it‐ self. The advantage of this is that while you’re working on a page, you can immediately spot any errors as you load it in a browser. Doing this will require a little setup, so let’s get started.The first thing we’ll need is a test framework. We’ll be using Mocha. First, we add the package to the project:    npm install --save-dev mochaNote that we used --save-dev instead of --save; this tells npm to list this package in the development dependencies instead of the runtime dependencies. This will reduce the number of dependencies the project has when we deploy live instances of the website.Since we’ll be running Mocha in the browser, we need to put the Mocha resources in the public folder so it will be served to the client. We’ll put these in a subdirectory, public/ vendor:	
-	mkdir public/vendor    cp node_modules/mocha/mocha.js public/vendor    cp node_modules/mocha/mocha.css public/vendor
-    
-It’s a good idea to put third-party libraries that you are using in a special directory, like vendor. This makes it easier to separate what code you’re responsible for testing and modifying, and what code should be hands off.
+Page Testing
+My recommendation for page testing is that you actually embed tests in the page it‐ self. The advantage of this is that while you’re working on a page, you can immediately spot any errors as you load it in a browser. Doing this will require a little setup, so let’s get started.
+The first thing we’ll need is a test framework. We’ll be using Mocha. First, we add the package to the project:
+    npm install --save-dev mocha
+Note that we used --save-dev instead of --save; this tells npm to list this package in the development dependencies instead of the runtime dependencies. This will reduce the number of dependencies the project has when we deploy live instances of the website.
+Since we’ll be running Mocha in the browser, we need to put the Mocha resources in the public folder so it will be served to the client. We’ll put these in a subdirectory, public/ vendor:
+	
+
+	mkdir public/vendor
+    cp node_modules/mocha/mocha.js public/vendor
+    cp node_modules/mocha/mocha.css public/vendor
+
+    
+
+It’s a good idea to put third-party libraries that you are using in a special directory, like vendor. This makes it easier to separate what code you’re responsible for testing and modifying, and what code should be hands off.
 
 Tests usually require a function called assert (or expect). This is available in the Node framework, but not inherently in a browser, so we’ll be using the Chai assertion library:
-    npm install --save-dev chai    cp node_modules/chai/chai.js public/vendor
-    Now that we have the necessary files, we can modify the Meadowlark Travel website to allow running tests. The catch is, we don’t want the tests to always be there: not only will it slow down your website, but your users don’t want to see the results of tests! Tests should be disabled by default, but it should be very easy to enable them. To meet both of these goals, we’re going to use a URL parameter to turn on tests. When we’re done,
+
+    npm install --save-dev chai
+    cp node_modules/chai/chai.js public/vendor
+
+    
+Now that we have the necessary files, we can modify the Meadowlark Travel website to allow running tests. The catch is, we don’t want the tests to always be there: not only will it slow down your website, but your users don’t want to see the results of tests! Tests should be disabled by default, but it should be very easy to enable them. To meet both of these goals, we’re going to use a URL parameter to turn on tests. When we’re done,
 
 
 going to 
 >http://localhost:3000 will load the home page, and 
 
 >http://localhost:3000? test=1 will load the home page complete with tests.
-First, we’re going to use some middleware to detect test=1 in the querystring. It must appear before we define any routes in which we wish to use it:
 
-```app.use(function(req, res, next){res.locals.showTests = app.get('env') !== 'production' &&                    req.query.test === '1';            next();});    // routes go here....
+First, we’re going to use some middleware to detect test=1 in the querystring. It must appear before we define any routes in which we wish to use it:
+
 ```
-The specifics about this bit of code will become clear in later chapters; what you need to know for right now is that if test=1 appears in the querystring for any page (and we’re not running on a production server), the property res.locals.showTests will set to be true. The res.locals object is part of the context that will be passed to views (this will be explained in more detail in Chapter 7).Now we can modify views/layouts/main.handlebars to conditionally include the test framework. Modify the 
+app.use(function(req, res, next){
+res.locals.showTests = app.get('env') !== 'production' &&
+                    req.query.test === '1';
+            next();
+});
+    // routes go here....
+```
 
-```<head> section:<head><title>Meadowlark Travel</title>            {{#if showTests}}<link rel="stylesheet" href="/vendor/mocha.css"> {{/if}}<script src="//code.jquery.com/jquery-2.0.2.min.js"></script> </head>
-```We’re linking in jQuery here because, in addition to using it as our primary DOM manipulation library for the site, we can use it to make test assertions. You’re free to use whatever library you like (or none at all), but I recommend jQuery. You’ll often hear that JavaScript libraries should be loaded last, right before the closing </body> tag. There is good reason for this, and we will learn some techniques to make this possible, but for now, we’re going to include jQuery early.1Then, right before the closing </body> tag:
-```{{#if showTests}}	<div id="mocha"></div><script src="/vendor/mocha.js"></script> <script src="/vendor/chai.js"></script> <script>                            mocha.ui('tdd');var assert = chai.assert; </script>
-```1. Remember the first principle of performance tuning: profile first, then optimize. 42| Chapter 5: Quality Assurance
-<script src="/qa/tests-global.js"></script> {{#if pageTestScript}}<script src="{{pageTestScript}}"></script> {{/if}}<script>mocha.run();</script> {{/if}}</body>Note that Mocha and Chai get included, as well as a script called /qa/global-tests.js. As the name implies, these are tests that will be run on every page. A little farther down, we optionally link in page-specific tests, so that you can have different tests for different pages. We’ll start with the global tests, and then add page-specific tests. Let’s start with a single, simple test: making sure the page has a valid title. Create the directory public/ qa and create a file tests-global.js in it:suite('Global Tests', function(){test('page has a valid title', function(){                    assert(document.title && document.title.match(/\S/) &&                            document.title.toUpperCase() !== 'TODO');}); });Mocha supports multiple “interfaces,” which control the style of your tests. The default interface, behavior-driven development (BDD), is tailored to make you think in a behavioral sense. In BDD, you de‐ scribe components and their behaviors, and the tests then verify those behaviors. However, I find that very often, there are tests that don’t fit this model, and then the BDD language just looks strange. Test- driven development (TDD) is more matter-of-fact: you describe suites of tests and tests within the suite. There’s nothing to stop you from using both interfaces in your tests, but then it becomes a con‐ figuration hassle. For that reason, I’ve opted to stick with TDD in this book. If you prefer BDD, or mixing BDD and TDD, by all means do so.Go ahead and run the site now. Visit the home page and examine the source: you’ll see no evidence of test code. Now, add test=1 to the querystring (http://localhost:3000/? test=1), and you’ll see the tests run on the page. Any time you want to test the site, all you have to do is add test=1 to the querystring!Now let’s add a page-specific test. Let’s say that we want to ensure that a link to the yet- to-be-created Contact page always exists on the About page. We’ll create a file called public/qa/tests-about.js:suite('"About" Page Tests', function(){test('page should contain link to contact page', function(){                    assert($('a[href="/contact"]').length);  Page Testing | 43
-}); });We have one last thing to do: specify in the route which page test file the view should be using. Modify the About page route in meadowlark.js:app.get('/about', function(req, res) { res.render('about', {});        fortune: fortune.getFortune(),pageTestScript: '/qa/tests-about.js' });Load the About page withtest=1in the querystring: you’ll see two suites and one failure! Now add a link to the nonexistent Contact page, and you’ll see the test become successful when you reload.Depending on the nature of your site, you may want this to be more automatic. For example, if your route was /foo, you could automatically set the page-specific tests to be /foo/tests-foo.js. The downside of this approach is that you lose flexibility. For exam‐ ple, if you have multiple routes that point to the same view, or even very similar content, you might want to use the same test file.Let’s resist the temptation to add more tests now: those will come as we progress through the book. For now, we have the basic framework necessary to add global and page- specific tests.
+
+The specifics about this bit of code will become clear in later chapters; what you need to know for right now is that if test=1 appears in the querystring for any page (and we’re not running on a production server), the property res.locals.showTests will set to be true. The res.locals object is part of the context that will be passed to views (this will be explained in more detail in Chapter 7).
+Now we can modify views/layouts/main.handlebars to conditionally include the test framework. Modify the 
+
+```
+<head> section:
+<head>
+<title>Meadowlark Travel</title>
+            {{#if showTests}}
+<link rel="stylesheet" href="/vendor/mocha.css"> {{/if}}
+<script src="//code.jquery.com/jquery-2.0.2.min.js"></script> </head>
+```
+
+We’re linking in jQuery here because, in addition to using it as our primary DOM manipulation library for the site, we can use it to make test assertions. You’re free to use whatever library you like (or none at all), but I recommend jQuery. You’ll often hear that JavaScript libraries should be loaded last, right before the closing </body> tag. There is good reason for this, and we will learn some techniques to make this possible, but for now, we’re going to include jQuery early.1
+Then, right before the closing </body> tag:
+
+```
+{{#if showTests}}
+	<div id="mocha"></div>
+<script src="/vendor/mocha.js"></script> <script src="/vendor/chai.js"></script> <script>
+                            mocha.ui('tdd');
+var assert = chai.assert; </script>
+```
+
+1. Remember the first principle of performance tuning: profile first, then optimize.
+ 42
+| Chapter 5: Quality Assurance
+<script src="/qa/tests-global.js"></script> {{#if pageTestScript}}
+<script src="{{pageTestScript}}"></script> {{/if}}
+<script>mocha.run();</script> {{/if}}
+</body>
+Note that Mocha and Chai get included, as well as a script called /qa/global-tests.js. As the name implies, these are tests that will be run on every page. A little farther down, we optionally link in page-specific tests, so that you can have different tests for different pages. We’ll start with the global tests, and then add page-specific tests. Let’s start with a single, simple test: making sure the page has a valid title. Create the directory public/ qa and create a file tests-global.js in it:
+suite('Global Tests', function(){
+test('page has a valid title', function(){
+                    assert(document.title && document.title.match(/\S/) &&
+                            document.title.toUpperCase() !== 'TODO');
+}); });
+Mocha supports multiple “interfaces,” which control the style of your tests. The default interface, behavior-driven development (BDD), is tailored to make you think in a behavioral sense. In BDD, you de‐ scribe components and their behaviors, and the tests then verify those behaviors. However, I find that very often, there are tests that don’t fit this model, and then the BDD language just looks strange. Test- driven development (TDD) is more matter-of-fact: you describe suites of tests and tests within the suite. There’s nothing to stop you from using both interfaces in your tests, but then it becomes a con‐ figuration hassle. For that reason, I’ve opted to stick with TDD in this book. If you prefer BDD, or mixing BDD and TDD, by all means do so.
+Go ahead and run the site now. Visit the home page and examine the source: you’ll see no evidence of test code. Now, add test=1 to the querystring (http://localhost:3000/? test=1), and you’ll see the tests run on the page. Any time you want to test the site, all you have to do is add test=1 to the querystring!
+Now let’s add a page-specific test. Let’s say that we want to ensure that a link to the yet- to-be-created Contact page always exists on the About page. We’ll create a file called public/qa/tests-about.js:
+suite('"About" Page Tests', function(){
+test('page should contain link to contact page', function(){
+                    assert($('a[href="/contact"]').length);
+  Page Testing | 43
+}); });
+We have one last thing to do: specify in the route which page test file the view should be using. Modify the About page route in meadowlark.js:
+app.get('/about', function(req, res) { res.render('about', {
+});
+        fortune: fortune.getFortune(),
+pageTestScript: '/qa/tests-about.js' });
+Load the About page withtest=1in the querystring: you’ll see two suites and one failure! Now add a link to the nonexistent Contact page, and you’ll see the test become successful when you reload.
+Depending on the nature of your site, you may want this to be more automatic. For example, if your route was /foo, you could automatically set the page-specific tests to be /foo/tests-foo.js. The downside of this approach is that you lose flexibility. For exam‐ ple, if you have multiple routes that point to the same view, or even very similar content, you might want to use the same test file.
+Let’s resist the temptation to add more tests now: those will come as we progress through the book. For now, we have the basic framework necessary to add global and page- specific tests.
